do not change to emscripten branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Build ScummVM 🔧
         run: |
           cd scummvm
-          git checkout emscripten
+          #git checkout emscripten
           git pull
           git remote add upstream https://github.com/scummvm/scummvm.git
           git fetch upstream
