--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,13 +50,14 @@ jobs:
       - name: Build ScummVM 🔧
         run: |
           git clone https://github.com/neuromancer/scummvm-demo --recursive 
+          cd scummvm-demo
           cd scummvm
           git checkout emscripten
           git pull
           git remote add upstream https://github.com/scummvm/scummvm.git
           git fetch upstream
           git rebase upstream/master
-          cp ../scummvm-icons/gui-icons-*.dat ./gui/themes/gui-icons.dat
+          cp ../../scummvm-icons/gui-icons-*.dat ./gui/themes/gui-icons.dat
           ./dists/emscripten/build.sh build --verbose  --enable-plugins --disable-tinygl --disable-all-engines --enable-engine-static=hypno --bundle-games=sinistersix,"https://downloads.scummvm.org/frs/demos/hypno/wetlands-dos-demo1-en.zip","https://downloads.scummvm.org/frs/demos/hypno/wetlands-dos-demo2-en.zip"
           cp build-emscripten/scummvm.html build-emscripten/index.html
           cd ..
