--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,9 +63,11 @@ jobs:
           ./dists/emscripten/build.sh build --verbose  --enable-plugins --disable-tinygl --disable-all-engines --enable-engine-static=hypno --bundle-games=sinistersix,"https://downloads.scummvm.org/frs/demos/hypno/wetlands-dos-demo1-en.zip","https://downloads.scummvm.org/frs/demos/hypno/wetlands-dos-demo2-en.zip"
           cp build-emscripten/scummvm.html build-emscripten/index.html
           cd ..
+          ls
+          cd scummvm-demo
 
       - name: Deploy Demo 🚀
         uses: JamesIves/github-pages-deploy-action@v4.2.5
         with:
           branch: gh-pages # The branch the action should deploy to.
-          folder: scummvm-demo/scummvm/build-emscripten # The folder the action should deploy.
+          folder: scummvm/build-emscripten # The folder the action should deploy.
