--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,12 +23,11 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      #- name: Checkout 🛎️
-      #  uses: actions/checkout@v2
-      #  with:
-      #    submodules: true
-      #    lfs: true
-                
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2
+        with:
+          submodules: true
+ 
       #- name: Cache scummvm 
       #  uses: actions/cache@v2
       #  with:
@@ -47,23 +46,20 @@ jobs:
           python3 gen-set.py
           cd ..
 
-      - name: Build ScummVM 🔧
+      - name: Rebase and Build ScummVM 🔧
         run: |
           git config --global user.email "you@example.com"
           git config --global user.name "Your Name"
-          git clone ssh://git@github.com/neuromancer/scummvm-demo.git --recursive 
-          cd scummvm-demo
-          cd scummvm
-          git checkout emscripten
-          git pull
+          git clone https://github.com/chkuendig/scummvm -b emscripten --recursive scummvm-to-rebase
+          cd scummvm-to-rebase
           git remote add upstream https://github.com/scummvm/scummvm.git
           git fetch upstream
           git rebase upstream/master
-          cp ../../scummvm-icons/gui-icons-*.dat ./gui/themes/gui-icons.dat
+          cp ../scummvm-icons/gui-icons-*.dat ./gui/themes/gui-icons.dat
           ./dists/emscripten/build.sh build --verbose  --enable-plugins --disable-tinygl --disable-all-engines --enable-engine-static=hypno --bundle-games=sinistersix,"https://downloads.scummvm.org/frs/demos/hypno/wetlands-dos-demo1-en.zip","https://downloads.scummvm.org/frs/demos/hypno/wetlands-dos-demo2-en.zip"
           cp build-emscripten/scummvm.html build-emscripten/index.html
           cd ..
-          pwd
+          cp -R scummvm-to-rebase/build-emscripten scummvm
           ls
 
       - name: Deploy Demo 🚀
