--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
           git rebase upstream/master
           git apply ../prefix.diff
           cp ../scummvm-icons/gui-icons-*.dat ./gui/themes/gui-icons.dat
-          ./dists/emscripten/build.sh build --verbose  --enable-plugins --disable-tinygl --disable-all-engines --enable-engine-static=hypno --bundle-games=sinistersix,"https://downloads.scummvm.org/frs/demos/hypno/wetlands-dos-demo1-en.zip","https://downloads.scummvm.org/frs/demos/hypno/wetlands-dos-demo2-en.zip"
+          ./dists/emscripten/build.sh build --verbose  --enable-plugins --disable-tinygl --disable-all-engines --enable-engine-static=hypno --bundle-games="https://github.com/neuromancer/scummvm-demo/releases/download/demos/sinistersix-dos-demo-en.zip","https://github.com/neuromancer/scummvm-demo/releases/download/demos/wetlands-dos-demo1-en.zip","https://github.com/neuromancer/scummvm-demo/releases/download/demos/wetlands-dos-demo2-en.zip"
           cp build-emscripten/scummvm.html build-emscripten/index.html
           cd ..
           cp -R scummvm-to-rebase/build-emscripten scummvm
