--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,9 @@ jobs:
           python3 gen-set.py
           cd ..
 
+      - name: Setup ccache
+        uses: Chocobo1/setup-ccache-action@v1
+
       - name: Rebase and Build ScummVM 🔧
         run: |
           git config --global user.email "you@example.com"
