--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,9 +59,11 @@ jobs:
           git fetch upstream
           git rebase upstream/master
           cp ../scummvm-icons/gui-icons-*.dat ./gui/themes/gui-icons.dat
+          export EMCC_CCACHE=1
           ./dists/emscripten/build.sh build --verbose  --enable-plugins --disable-tinygl --disable-all-engines --enable-engine-dynamic=hypno --bundle-games=,sinistersix,"https://downloads.scummvm.org/frs/demos/hypno/wetlands-dos-demo1-en.zip","https://downloads.scummvm.org/frs/demos/hypno/wetlands-dos-demo2-en.zip"
           cp build-emscripten/scummvm.html build-emscripten/index.html
           cd ..
+          ccache -s
           cp -R scummvm-to-rebase/build-emscripten scummvm
 
       - name: Deploy Demo 🚀
