--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,11 +28,17 @@ jobs:
         with:
           submodules: true
  
-      #- name: Cache scummvm 
-      #  uses: actions/cache@v2
-      #  with:
-      #    path: ./scummvm
-      #    key: scummvm
+      - name: Cache scummvm 
+        uses: actions/cache@v2
+        with:
+          path: | 
+            ./scummvm/**/*.o
+            ./scummvm/**/**/*.o
+            ./scummvm/**/**/**/*.o
+            ./scummvm/**/**/**/**/*.o
+            ./scummvm/**/**/**/**/**/*.o
+            ./scummvm/**/**/**/**/**/**/*.o
+          key: scummvm-cache
 
       - name: Checkout icons 🛎️
         uses: actions/checkout@v2
@@ -46,9 +52,6 @@ jobs:
           python3 gen-set.py
           cd ..
 
-      - name: Setup ccache
-        uses: Chocobo1/setup-ccache-action@v1
-
       - name: Rebase and Build ScummVM 🔧
         run: |
           git config --global user.email "you@example.com"
@@ -59,11 +62,9 @@ jobs:
           git fetch upstream
           git rebase upstream/master
           cp ../scummvm-icons/gui-icons-*.dat ./gui/themes/gui-icons.dat
-          export EMCC_CCACHE=1
           ./dists/emscripten/build.sh build --verbose  --enable-plugins --disable-tinygl --disable-all-engines --enable-engine-dynamic=hypno --bundle-games=,sinistersix,"https://downloads.scummvm.org/frs/demos/hypno/wetlands-dos-demo1-en.zip","https://downloads.scummvm.org/frs/demos/hypno/wetlands-dos-demo2-en.zip"
           cp build-emscripten/scummvm.html build-emscripten/index.html
           cd ..
-          ccache -s
           cp -R scummvm-to-rebase/build-emscripten scummvm
 
       - name: Deploy Demo 🚀
