--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,8 +72,11 @@ jobs:
       - name: Build ScummVM
         run: |
           cd scummvm-to-rebase
-          cp ../scummvm-icons/gui-icons-*.dat ./gui/themes/gui-icons.dat 
-          ./dists/emscripten/build.sh build --verbose --enable-optimizations --enable-plugins --disable-tinygl --disable-all-engines --enable-engine-dynamic=hypno --bundle-games=,sinistersix,"https://downloads.scummvm.org/frs/demos/hypno/wetlands-dos-demo1-en.zip","https://downloads.scummvm.org/frs/demos/hypno/wetlands-dos-demo2-en.zip"
+          ls ../scummvm-icons -l
+          cp ../scummvm-icons/gui-icons-*.dat ./gui/themes/gui-icons.dat
+          ls ./gui/themes -l
+          ./dists/emscripten/build.sh build --verbose --enable-optimizations --enable-plugins --disable-tinygl --disable-all-engines --enable-engine-dynamic=private --enable-engine-dynamic=hypno --bundle-games=,sinistersix,"https://downloads.scummvm.org/frs/demos/hypno/wetlands-dos-demo1-en.zip","https://downloads.scummvm.org/frs/demos/hypno/wetlands-dos-demo2-en.zip","https://downloads.scummvm.org/frs/demos/private/private-eye-demo-en.zip"
+          ls ./build-emscripten -l
           cd ..
           cp -R scummvm-to-rebase/build-emscripten scummvm
 
