--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,11 +49,12 @@ jobs:
         uses: actions/cache@v2
         with:
           path: |
-            ./scummvm-to-rebase/engines/engines.mk
+            ./scummvm-to-rebase/engines/engines.awk
             ./scummvm-to-rebase/engines/detection_table.h
             ./scummvm-to-rebase/engines/plugins_table.h
             ./scummvm-to-rebase/config.h
             ./scummvm-to-rebase/config.mk
+            ./scummvm-to-rebase/configure.stamp
             ./scummvm-to-rebase/dists/emscripten/emsdk-3.1.6
             ./scummvm-to-rebase/dists/emscripten/libs 
             ./scummvm-to-rebase/**/*.[o,a]
@@ -68,7 +69,8 @@ jobs:
         run: |
           cd scummvm-to-rebase
           cp ../scummvm-icons/gui-icons-*.dat ./gui/themes/gui-icons.dat
-          ./dists/emscripten/build.sh build --verbose --enable-optimizations --enable-plugins --disable-tinygl --disable-all-engines --enable-engine-dynamic=private --enable-engine-dynamic=hypno --bundle-games=,sinistersix,"https://downloads.scummvm.org/frs/demos/hypno/wetlands-dos-demo1-en.zip","https://downloads.scummvm.org/frs/demos/hypno/wetlands-dos-demo2-en.zip","https://downloads.scummvm.org/frs/demos/private/private-eye-demo-en.zip"
+          ./dists/emscripten/build.sh build --verbose --enable-optimizations --enable-plugins --disable-tinygl --disable-all-engines --enable-engine-dynamic=private --enable-engine-dynamic=hypno --bundle-games=,sinistersix,"https://downloads.scummvm.org/frs/demos/hypno/wetlands-dos-demo1-en.zip","https://downloads.scummvm.org/frs/demos/hypno/wetlands-dos-demo2-en.zip","https://downloads.scummvm.org/frs/demos/private/private-eye-demo-en.zip","https://downloads.scummvm.org/frs/demos/private/private-eye-demo-es.zip"
+
           cd ..
           cp -R scummvm-to-rebase/build-emscripten scummvm
 
